Changed Francesca's req
-C Description
-C Font/words

--- a/merit/juniors/fashion.html
+++ b/merit/juniors/fashion.html
@@ -306,8 +306,8 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
+          <li class="active">Fashion Scholarship Fund (FSF)</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>Fashion Scholarship Fund (FSF)</h2>
                 <hr/>
               </div>
             </div>
@@ -343,7 +343,10 @@
               <div class="row-fluid">
                 <div class="span12">
                 	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
+                		The YMA Fashion Scholarship Fund (FSF) is a national non-profit association consisting of influential members of the fashion community, dedicated to promoting education of the fashion arts and business by granting scholarships to talented students and facilitating internships, mentorships, and career programs.
+                  </p>
+                  <p>
+                    Students of any major with a demonstrated interest in fashion are qualified to apply. Previous scholars have included marketing, finance, psychology, and art history majors in addition to fashion design, merchandising, and textile majors. On average, approximately 100 scholarships are awarded each year
 					        </p>
                 </div>
               </div> 
@@ -352,12 +355,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
+                $5,000. One scholar from each school will also have the opportunity to compete for the four $30,000 Geoffrey Beene Scholarships (four finalists receive $10,000).
                 </div>
               </div> 
               <div class="row-fluid">
@@ -365,16 +363,14 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  An applicant must be nominated by UCLA and: 
                 <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
+                  <li>Eligible students from member schools may apply. Students must be selected by the educator contact at one of the member schools. Please see the schools tab to see the list of member schools.</li>
+                  <li>Qualifying students must be enrolled as full-time students at a member FSF college/university. Eligible students must be a current sophomore, junior or senior (Seniors must graduate in the spring; fall graduates are NOT eligible)</li>
+                  <li>Applicants must have an overall G.P.A of 3.0 or above in a 4.0 G.P.A system.</li>
+                  <li>Upon receiving an FSF scholarship, it is mandatory to secure an industry-related internship, either found on your own or offered by a FSF member company.</li>
                 </ol>
-                For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                For more information, call The UCLA Scholarship Resource Center at 310-206-2875 or go to <br />
+                <a href="http://fashionscholarshipfund.org">http://fashionscholarshipfund.org</a><br />
 
                 </div>
               </div> 
