--- a/merit/juniors/strauss.html
+++ b/merit/juniors/strauss.html
@@ -306,8 +306,8 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
+          <li class="active">Strauss Scholarship Foundation Award</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>Strauss Scholarship Foundation Award</h2>
                 <hr/>
               </div>
             </div>
@@ -343,8 +343,8 @@
               <div class="row-fluid">
                 <div class="span12">
                 	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
-					        </p>
+                		The Strauss Scholarship is a system-wide UC scholarship for sophomores and juniors in any major interested in pursuing a new or continuing public service project during their junior or senior year. The Strauss Foundation seeks students with a demonstrated history of public service, leadership potential and communication skills, who wish to contribute to local, regional, or national communities. 
+        					</p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -352,12 +352,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
+                $10,000
                 </div>
               </div> 
               <div class="row-fluid">
@@ -365,17 +360,14 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  An applicant must be nominated by UCLA and: 
+                  An applicant must be nominated by UCLA and 
                 <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
+                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application, and "junior" as a student with one more year of undergraduate study after the year of application)</li>
+                  <li>Have a demonstrated history of public service and leadership ability</li>
+                  <li>Intend to devote a significant part of his or her life to public service</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
-
+                <a href="http://www.ugeducation.ucla.edu/honors/strauss.html">http://www.ugeducation.ucla.edu/honors/strauss.html</a>
                 </div>
               </div> 
             </div>
