--- a/merit/juniors/thomas.html
+++ b/merit/juniors/thomas.html
@@ -306,8 +306,8 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
+          <li class="active">The Thomas R. Pickering Foreign Affairs Fellowship</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>The Thomas R. Pickering Foreign Affairs Fellowship</h2>
                 <hr/>
               </div>
             </div>
@@ -342,9 +342,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
-					        </p>
+                	<p>The Thomas R. Pickering Foreign Affairs Fellowship Programs are a collaborative effort between the United States Department of State and the Woodrow Wilson National Fellowship Foundation.  The Programs provide academic and professional preparation for outstanding candidates to enter the U.S. Department of State Foreign Service, representing America’s interests abroad. Pickering Fellows are undergraduate and graduate students in academic programs relevant to international affairs, political and economic analysis, administration, management, and science policy.</p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -352,11 +350,13 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
+                Fellows will receive financial support of up to $40,000 annually (as of 2014) for:
                 <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
+                  <li>Tuition costs (first priority)</li>
+                  <li>Room and board</li>
+                  <li>Books</li>
+                  <li>Mandatory Fees</li>
+                  <li>One round trip ticket between Fellow's residence and his/her academic institutions</li>
                 </ul>
                 </div>
               </div> 
@@ -367,14 +367,15 @@
                 <div class="span12">
                   An applicant must be nominated by UCLA and: 
                 <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
+                  <li>Applicants must be in their Junior year.</li>
+                  <li>Winners are expected to enroll in a two-year, full-time master’s degree program in an academic field relevant to the work of the Foreign Service. The Fellowship does not fund law or joint law degree programs.</li>
+                  <li>Only U.S. institutions based in the U.S. are eligible.</li>
+                  <li>Applicants must be available to fulfill the summer internship obligations </li>
+                  <li>Applicants must have a cumulative grade point average of 3.2 or higher on a 4.0 scale at the time of application.</li>
+                  <li>A cumulative grade point average of 3.2 or higher on a 4.0 scale must be maintained throughout participation in the program</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                <a href="http://woodrow.org/fellowships/pickering/">http://woodrow.org/fellowships/pickering/</a>
 
                 </div>
               </div> 
