--- a/merit/juniors/truman.html
+++ b/merit/juniors/truman.html
@@ -306,8 +306,8 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
+          <li class="active">Truman Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>Truman Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -342,9 +342,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
-					        </p>
+                	<p>Outstanding UCLA juniors interested in a career in government or public service are invited to apply for a Truman Scholarship.</p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -352,12 +350,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
+                Harry S. Truman Scholarship Foundation will award 65 merit-based educational scholarships to college juniors throughout the United States. A Truman Scholarship provides $30,000.
                 </div>
               </div> 
               <div class="row-fluid">
@@ -365,16 +358,15 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  An applicant must be nominated by UCLA and: 
+                  In order to be considered for UCLA nomination you must:
                 <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
+                  <li>Be a junior pursuing a Bachelor's Degree during the 2013-14 academic year. "Junior" means a student who plans to continue full-time undergraduate study and who expects to receive a Bachelor's Degree between December 2014 and August 2015</li> 
+                  <li>Have demonstrated leadership ability, be committed to a career in government or public service, and plan to attend graduate school to prepare for a public service career</li>
+                  <li>Have a 3.7 overall GPA or better</li>
+                  <li>Be a U.S. citizen or a U.S. national</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                <a href="http://www.ugeducation.ucla.edu/honors/truman.html">http://www.ugeducation.ucla.edu/honors/truman.html</a>
 
                 </div>
               </div> 
