--- a/merit/juniors/udall.html
+++ b/merit/juniors/udall.html
@@ -306,7 +306,7 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
           <li class="active">Udall Scholarships</li>
         </ul>
       </div>
@@ -353,11 +353,6 @@
               <div class="row-fluid">
                 <div class="span12">
                 $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
                 </div>
               </div> 
               <div class="row-fluid">
