--- a/merit/sophomores/boren.html
+++ b/merit/sophomores/boren.html
@@ -338,7 +338,7 @@
             </div>
             <div class="span8">
               <div class="row-fluid">
-                <h3>Scholarship Description</h3>
+                <h3>Description</h3>
               </div>
               <div class="row-fluid">
                 <div class="span12">
@@ -382,6 +382,7 @@
                 </ol>
                 For more information, go to <br />
                 <a href="http://www.gdnet.ucla.edu/asis/library/boren.htm">http://www.gdnet.ucla.edu/asis/library/boren.htm</a><br />
+                <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
                 <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
 
                 </div>
