--- a/merit/juniors/boren.html
+++ b/merit/juniors/boren.html
@@ -306,8 +306,8 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li><a href="./index.html">Juniors</a> <span class="divider">/</span></li>
+          <li class="active">Boren Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>Boren Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -343,8 +343,17 @@
               <div class="row-fluid">
                 <div class="span12">
                 	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
-					        </p>
+                		Boren Scholarships provide up to $20,000 to U.S. undergraduate students to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East. The countries of Western Europe, Canada, Australia, and New Zealand are excluded. 
+					         </p>
+                	<p>
+        						Boren Scholars represent a variety of academic backgrounds, but all are interested in studying less commonly taught languages, including but not limited to Arabic, Chinese, Korean, Portuguese, Russian, and Swahili. 
+        					</p>
+                	<p>
+            				Boren Scholarships are funded by the National Security Education Program (NSEP), which focuses on geographic areas, languages, and fields of study deemed critical to U.S. national security. Applicants should identify how their study abroad program, as well as their future academic and career goals, will contribute to U.S. national security, broadly defined.  NSEP draws on a broad definition of national security, recognizing that the scope of national security has expanded to include not only the traditional concerns of protecting and promoting American well-being, but also the challenges of global society, including sustainable development, environmental degradation, global disease and hunger, population growth and migration, and economic competitiveness.
+            			</p>
+                	<p>
+						        Scholarship award recipients will be selected on the basis of merit with consideration for program preferences, academic record and potential to succeed in the proposed study abroad program, commitment to international education to fulfill academic and career goals, language interest and aptitude, and the quality and appropriateness of the proposed program and its relevance to the National Security Education Program. 
+					       </p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -352,7 +361,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
+                Maximum scholarship awards are: 
                 <ul>
                   <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
                   <li>$10,000 for a semester</li>
@@ -365,16 +374,15 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  An applicant must be nominated by UCLA and: 
                 <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
+                  <li>A U.S. citizen at the time of application.</li>
+                  <li>A high school graduate, or have earned a GED, and are matriculated in an undergraduate degree program in a U.S. post-secondary institution, including universities, colleges and community colleges accredited by an accrediting body recognized by the U.S. Department of Education.</li>
+                  <li>Applying to engage in a study abroad experience in a country outside of Western Europe, Canada, Australia, or New Zealand that meets home institution standards.</li>
+                  <li>Planning to use the scholarship for study abroad, and the study abroad program ends before you graduate. Boren Scholarships are not for study in the United States.</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                <a href="http://www.gdnet.ucla.edu/asis/library/boren.htm">http://www.gdnet.ucla.edu/asis/library/boren.htm</a><br />
+                <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
 
                 </div>
               </div> 
