--- a/merit/juniors/index.html
+++ b/merit/juniors/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Scholarship, SRC, UC, UCLA, University of California Los Angeles, paying for college" />
     <meta name="description" content="The UCLA Scholarship Resource Center provides scholarship information, resources, and support services to all UCLA students, regardless of financial aid eligibility."/>
     <meta name="author" content="Joon-Sub Chung">
+
 
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
@@ -306,8 +307,7 @@
         <ul class="breadcrumb">
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
-          <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Udall Scholarships</li>
+          <li class="active">Juniors</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Udall Scholarships</h2>
+                <h2>Juniors</h2>
                 <hr/>
               </div>
             </div>
@@ -338,46 +338,58 @@
             </div>
             <div class="span8">
               <div class="row-fluid">
-                <h3>Description</h3>
-              </div>
-              <div class="row-fluid">
                 <div class="span12">
-                	<p>
-                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
-					        </p>
+                  <h3>The Scholarship</h3>
                 </div>
-              </div> 
-              <div class="row-fluid">
-                <h3>Award</h3>
               </div>
-              <div class="row-fluid">
-                <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
-                </div>
-              </div> 
-              <div class="row-fluid">
-                <h3>Eligibility</h3>
-              </div>
-              <div class="row-fluid">
-                <div class="span12">
-                  An applicant must be nominated by UCLA and: 
-                <ol>
-                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
-                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
-                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
-                  <li>Have a cumulative GPA of 3.0 or better</li>
-                  <li>Demonstrate leadership and service</li>
-                </ol>
-                For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
-
-                </div>
-              </div> 
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="beinecke.html">Beinecke Memorial Scholarship</a></div>
+                  <div class="span8">For Juniors planning graduate study in the Arts, Humanities, or Social Sciences</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="boren.html">Boren Scholarship</a></div>
+                  <div class="span8">Boren Scholarships provide U.S. undergraduate students with the opportunity to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund (FSF)</a></div>
+                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students and facilitates internships, mentorships, and career programs. Open Students of any major with a demonstrated interest in fashion.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="goldwater.html">Goldwater Scholarship</a></div>
+                  <div class="span8">For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="strauss.html">Strauss Scholarship Foundation Award</a></div>
+                  <div class="span8">For sophomores and juniors interested in pursuing a new or continuing public service project</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="udall.html">Udall Scholarships</a></div>
+                  <div class="span8">For Sophomores and Juniors interested in careers in Environmental Public Policy OR Tribal Public Policy OR Native American Health Care</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="thomas.html">The Thomas R. Pickering Foreign Affairs Fellowship</a></div>
+                  <div class="span8">The Fellowship is designed to attract outstanding individuals from all ethnic, racial and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="truman.html">Truman Scholarship</a></div>
+                  <div class="span8">For juniors planning graduate study leading to careers in government or public service</div>
+                </div> 
+              </div><!-- end -->
             </div>
          </div>
         </div>
@@ -424,13 +436,14 @@
         </div>
 
       </div>
+
       <!-- Le javascript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script type="text/script" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script type="text/script" src="../../assets/js/bootstrap.js"></script>
-      <script type="text/script" src="../../assets/js/jquery.menu-aim.js"></script>
+      <script src="../../assets/js/bootstrap.js"></script>
+      <script src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
