--- a/merit/sophomores/strauss.html
+++ b/merit/sophomores/strauss.html
@@ -338,7 +338,7 @@
             </div>
             <div class="span8">
               <div class="row-fluid">
-                <h3>Scholarship Description</h3>
+                <h3>Description</h3>
               </div>
               <div class="row-fluid">
                 <div class="span12">
